# epic-grp

./: .env.example  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TASKS.md  alembic.ini  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1f2a3b4c5d6e_transfers.py  25b3352ce776_init.py  3e5f9a0c7abc_lifecycle_flags.py  7b31df0d3abc_finances.py  9a1b2c3d4e5f_fx_rates_table.py  ab12cd34ef56_transfer_vet_and_ref.py
app/: __init__.py  main.py
app/core/: modules.py  money.py  security.py  settings.py
app/crud/: base.py  errors.py  user.py
app/db/: base.py  session.py
app/middleware/: access_log.py
app/models/: base.py  user.py
app/schemas/: __init__.py
app/services/: fx.py
docs/: ANALISE_MODULO_FINANCE.md  GRP_Arquitetura_Recomendada.md  TASKS.md  finance_refactor_plan.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx
scripts/: fin_diag.py  fx_import.py
tests/: conftest.py  test_auth.py  test_crud_base.py  test_env_engine.py  test_modules_flags.py  test_security_authz.py
tests/fin/: test_crud_complete.py  test_crud_fin.py  test_currency_exponents.py  test_endpoints_fin.py  test_filters_fin.py  test_fx_endpoints.py  test_fx_rates.py  test_lifecycle.py  test_migrations_fin.py  test_report_flags.py  test_reports_currency.py  test_reports_fin.py  test_reports_rounding.py  test_routes_error_paths.py  test_schemas_fin.py  test_transfer_tx_guard.py  test_transfers.py
(+119 files in other folders)
